--- a/ex13.html
+++ b/ex13.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <title>Exercico 13</title>
 </head>
-    <script>
+    <script lang="JavaScript">
         function triangulo()
         {
             var l1, l2, l3, verificador;
