--- a/ex17.html
+++ b/ex17.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Exercicio 17</title>
-    <script>
+    <script lang="JavaScript">
         function tab()
         {
             var num, i, tab ="", resultado;
